--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO y buenas practicas -->
+    <meta name="description" content="Sitio dedicado a la saga de videojuegos Assassin's Creed. Explora la historia, personajes emblemáticos, jugabilidad y más.">
+
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="./css/bootstrap.css"> -->
     <!--BoxIcons css-->
     <link  href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <title>Assasins Creed Saga</title>
@@ -34,9 +38,7 @@
         <div>
             <nav class="navDivHeader">
                 <!-- Menu Mobile-->
-                <!-- <input type="checkbox" id="check_menu"> -->
                 <input type="checkbox" id="check_menu">
-                
                 <ul class="ulNavDivHeader">
                     <li class="liUlNavHeader"><a class="aLiUlNavHeader" href="./pages/historia.html">Historia</a></li>
                     <li class="liUlNavHeader"><a class="aLiUlNavHeader"href="./pages/personajesEmblematicos.html">Personajes Emblematicos</a></li>
@@ -44,8 +46,7 @@
                     <li class="liUlNavHeader"><a class="aLiUlNavHeader" href="./pages/galeriaImagenes.html">Galeria de Imagenes</a></li>
                     <li class="liUlNavHeader"><a class="aLiUlNavHeader"href="./pages/contacto.html">Contacto</a></li>  
                 </ul>
-                <label for="check_menu"> <i class="bx bx-menu"></i></label>
-                <!-- <label for="check_menu"><i class="bx bx-menu"></i></label> -->
+                <label for="check_menu"><i class="bx bx-menu"></i></label>
             </nav>
         </div>
     </header>   
@@ -73,5 +74,7 @@
         <div class="arriba"><a class="aDiv" href="#header">Ir al menu principal </a></div>
     </footer>
     </div>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
