--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="../css/bootstrap.css"> -->
     <title>Contacto</title>
     <!--css main-->
     <link rel="stylesheet" href="../css/styles.css">
@@ -49,8 +50,6 @@
                     <form>
                         <label for="name">Nombre Completo:</label>
                         <input type="text" id="name" placeholder="Nombre y Apellido">
-                    </form>
-                    <form>
                         <label for="Provincia">Tu Provincia:</label>
                         <select name="Provincia">
                             <option value="--Seleccione--">Seleccione su provincia</option>
@@ -78,31 +77,18 @@
                             <option value="Tierra del Fuego">Tierra del fuego</option>
                             <option value="Tucuman">Tucuman</option>
                         </select>
-                    </form>
-                    <form>
                         <label for="Tu ciudad">Tu Ciudad:</label>
                         <input type="text" id="Tu Ciudad" placeholder="Ciudad">
-                    </form>
-                    <form>
                         <label for="number">Numero de celular:</label>
                         <input type="text" id="number" placeholder="11-xxxx-xxxx">
-                    </form>
-                    <form>
                         <label for="E-mail">E-mail:</label>
                         <input type="text" id="E-mail" placeholder="ejemplo@hotmail.com">
-                    </form>
-                    <div>Producto relacionado a tu consulta</div>
-                    <form>
+                        <div>Producto relacionado a tu consulta</div>
                         <input type="text">
-                    </form>
                         <div>Tu Consulta</div>
                         <textarea name="" id="" cols="30" rows="10"></textarea>
-                    </form>
-                    <form>
                         <input type="radio" name="recibirInfo" value="recibirInfo">
                         <div>Quiero recibir información de nuestros productos y promociones</div>
-                    </form>
-                    <form>
                         <input type="submit" value="Enviar">
                     </form>
                 </div>
@@ -113,5 +99,7 @@
         <div class="arriba"><a class="aDiv" href="#header">Ir al menu principal </a></div>
     </footer>
     </div>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
