--- a/pages/galeriaImagenes.html
+++ b/pages/galeriaImagenes.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="../css/bootstrap.css"> -->
     <title>Galeria de Imagenes</title>
     <!--css main-->
     <link rel="stylesheet" href="../css/styles.css">
@@ -41,7 +42,46 @@
         </header>
 <!--Main-->
         <main class="main" id="main">
-            <section class="galeria">
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../images/GALERIA/ac4_Wallpaper1_1920x1080.webp" class="d-block w-100" alt="..." class="imgGaleria">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../images/GALERIA/ACB_1920x1080.webp" class="d-block w-100" alt="..." class="imgGaleria">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../images/GALERIA/ACC_WP1.webp" class="d-block w-100" alt="..." class="imgGaleria">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../images/GALERIA/ACO_Wallpaper_BayekDesert_2048_1152.webp" class="d-block w-100" alt="..." class="imgGaleria">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../images/GALERIA/ACOdyssey_PC_Wallpaper_Spartan_1920x1080.webp" class="d-block w-100" alt="..." class="imgGaleria">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../images/GALERIA/ACU_Notre-Dame_Guillotine_1920x1080.webp" class="d-block w-100" alt="..." class="imgGaleria">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../images/GALERIA/ACV_England_Evening_Female.webp" class="d-block w-100" alt="..." class="imgGaleria">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../images/GALERIA/Uplay_PC_Wallpaper1_1920x1080.webp" class="d-block w-100" alt="..." class="imgGaleria">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../images/GALERIA/wallpaper_6.webp" class="d-block w-100" alt="..." class="imgGaleria">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <!-- <section class="galeria">
                 <div><img src="../images/GALERIA/ac4_Wallpaper1_1920x1080.webp" alt="" class="imgGaleria"></div>
                 <div><img src="../images/GALERIA/ACB_1920x1080.webp" alt="" class="imgGaleria"></div>
                 <div><img src="../images/GALERIA/ACC_WP1.webp" alt="" class="imgGaleria"></div>
@@ -51,12 +91,14 @@
                 <div><img src="../images/GALERIA/ACV_England_Evening_Female.webp" alt="" class="imgGaleria"></div>
                 <div><img src="../images/GALERIA/Uplay_PC_Wallpaper1_1920x1080.webp" alt="" class="imgGaleria"></div>
                 <div><img src="../images/GALERIA/wallpaper_6.webp" alt="" class="imgGaleria"></div>
-            </section>
+            </section> -->
         </main>
 <!--FOOTER-->
     <footer class="footer" id="footer">
         <div class="arriba"><a class="aDiv" href="#header">Ir al menu principal </a></div>
     </footer>
     </div>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
