modificacion del index y scss(menu desplegable y responsivo)

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -26,10 +26,8 @@
         <header class="header" id="header">
             <div class="divHeader">
                 <div class="containerLogo">
-                    <h1>
-                        <a href="../index.html"> <img src="../images/logoAssasins.png" alt="Assasins Creed" class="imgLogo"></a>
-                        Assasin$ Creed
-                    </h1>    
+                    <a href="./index.html"> <img src="../images/logoAssasins.png" alt="Assasins Creed" class="imgLogo"></a>
+                    <span>    Assasin$ Creed</span>    
                 </div>
             </div>
             <div >
