--- a/pages/personajesEmblematicos.html
+++ b/pages/personajesEmblematicos.html
@@ -22,14 +22,14 @@
             <!--HEADER-->
                     <div class="divHeader">
                         <div class="containerLogo">
-                            <h1>
-                                <a href="../index.html"> <img src="../images/logoAssasins.png" alt="Assasins Creed" class="imgLogo"></a>
-                                Assasin$ Creed
-                            </h1>    
+                            <a href="./index.html"> <img src="../images/logoAssasins.png" alt="Assasins Creed" class="imgLogo"></a>
+                            <span>    Assasin$ Creed</span>    
                         </div>
                     </div>
                     <div >
                         <nav class="navDivHeader">
+                            <input class="menu-btn" type="checkbox" id="menu-btn" />
+                            <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
                             <ul class="ulNavDivHeader">
                                 <li class="liUlNavHeader"><a class="aLiUlNavHeader"href="../pages/historia.html">Historia</a></li>
                                 <li class="liUlNavHeader"><a class="aLiUlNavHeader"href="../pages/personajesEmblematicos.html">Personajes Emblematicos</a></li>
