--- a/index.html
+++ b/index.html
@@ -26,30 +26,30 @@
 <body>
     <div class="contenedorDeGrid">
     <!--HEADER-->
-    <header class="header" id="header">
-        <div class="divHeader">
-            <div class="containerLogo">
-                <h1>
+    <header class="header">
+        <div class="content">
+            <div class="menu container-fluid">
+                <div class="logoTitulo">
                     <a href="./index.html"> <img src="./images/logoAssasins.png" alt="Assasins Creed" class="imgLogo"></a>
-                    Assasin$ Creed
-                </h1>    
+                <span>    Assasin$ Creed</span>
+                </div>
+<!-- Menu Mobile-->
+                <input type="checkbox" id="menu"/>
+                <label for="menu">
+                    <img src="./images/menu.png" class="menu-icono" alt="">
+                </label>
+                <nav class="navBar"> 
+                    <ul>
+                        <li><a href="./pages/historia.html">Historia</a></li>
+                        <li><a href="./pages/personajesEmblematicos.html">Personajes Emblematicos</a></li>
+                        <li><a href="./pages/jugabilidadMecanicas.html">Jugabilidad y Mecanicas</a></li>
+                        <li><a href="./pages/galeriaImagenes.html">Galeria de Imagenes</a></li>
+                        <li><a href="./pages/contacto.html">Contacto</a></li>  
+                    </ul>
+                </nav>
             </div>
         </div> 
-        <div>
-            <nav class="navDivHeader">
-                <!-- Menu Mobile-->
-                <input type="checkbox" id="check_menu">
-                <ul class="ulNavDivHeader">
-                    <li class="liUlNavHeader"><a class="aLiUlNavHeader" href="./pages/historia.html">Historia</a></li>
-                    <li class="liUlNavHeader"><a class="aLiUlNavHeader"href="./pages/personajesEmblematicos.html">Personajes Emblematicos</a></li>
-                    <li class="liUlNavHeader"><a class="aLiUlNavHeader"href="./pages/jugabilidadMecanicas.html">Jugabilidad y Mecanicas</a></li>
-                    <li class="liUlNavHeader"><a class="aLiUlNavHeader" href="./pages/galeriaImagenes.html">Galeria de Imagenes</a></li>
-                    <li class="liUlNavHeader"><a class="aLiUlNavHeader"href="./pages/contacto.html">Contacto</a></li>  
-                </ul>
-                <label for="check_menu"><i class="bx bx-menu"></i></label>
-            </nav>
-        </div>
-    </header>   
+    </header>
     <!--Main-->
     <main class="container-fluid main" id="main">
         <section class="sectionMain">
