modificacion de los enlaces a paginas

--- a/pages/galeriaImagenes.html
+++ b/pages/galeriaImagenes.html
@@ -18,8 +18,8 @@
 </head>
 <body>
     <div class="contenedorDeGrid">
-       <!--HEADER-->
-       <header class="header">
+    <!--HEADER-->
+    <header class="header" id="header">
         <div class="content">
             <div class="menu container-fluid">
                 <div class="logoTitulo">
