--- a/pages/historia.html
+++ b/pages/historia.html
@@ -23,7 +23,7 @@
 <body>
     <div class="contenedorDeGrid">
     <!--HEADER-->
-    <header class="header">
+    <header class="header" id="header">
         <div class="content">
             <div class="menu container-fluid">
                 <div class="logoTitulo">
