--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,31 +19,31 @@
 </head>
 <body>
     <div class="contenedorDeGrid">
-        <!--HEADER-->
-        <header class="header">
-            <div class="content">
-                <div class="menu container-fluid">
-                    <div class="logoTitulo">
-                        <a href="../index.html"> <img src="../images/logoAssasins.png" alt="Assasins Creed" class="imgLogo"></a>
-                    <span>    Assasin$ Creed</span>
-                    </div>
-    <!-- Menu Mobile-->
-                    <input type="checkbox" id="menu"/>
-                    <label for="menu">
-                        <img src="../images/menu.png" class="menu-icono" alt="">
-                    </label>
-                    <nav class="navBar"> 
-                        <ul>
-                            <li><a href="../pages/historia.html">Historia</a></li>
-                            <li><a href="../pages/personajesEmblematicos.html">Personajes Emblematicos</a></li>
-                            <li><a href="../pages/jugabilidadMecanicas.html">Jugabilidad y Mecanicas</a></li>
-                            <li><a href="../pages/galeriaImagenes.html">Galeria de Imagenes</a></li>
-                            <li><a href="../pages/contacto.html">Contacto</a></li>  
-                        </ul>
-                    </nav>
+    <!--HEADER-->
+    <header class="header" id="header">
+        <div class="content">
+            <div class="menu container-fluid">
+                <div class="logoTitulo">
+                    <a href="../index.html"> <img src="../images/logoAssasins.png" alt="Assasins Creed" class="imgLogo"></a>
+                <span>    Assasin$ Creed</span>
                 </div>
-            </div> 
-        </header>
+<!-- Menu Mobile-->
+                <input type="checkbox" id="menu"/>
+                <label for="menu">
+                    <img src="../images/menu.png" class="menu-icono" alt="">
+                </label>
+                <nav class="navBar"> 
+                    <ul>
+                        <li><a href="../pages/historia.html">Historia</a></li>
+                        <li><a href="../pages/personajesEmblematicos.html">Personajes Emblematicos</a></li>
+                        <li><a href="../pages/jugabilidadMecanicas.html">Jugabilidad y Mecanicas</a></li>
+                        <li><a href="../pages/galeriaImagenes.html">Galeria de Imagenes</a></li>
+                        <li><a href="../pages/contacto.html">Contacto</a></li>  
+                    </ul>
+                </nav>
+            </div>
+        </div> 
+    </header>
 <!--Main-->
         <main class="main" id="main">
             
