--- a/pages/jugabilidadMecanicas.html
+++ b/pages/jugabilidadMecanicas.html
@@ -19,7 +19,7 @@
 <body>
     <div class="contenedorDeGrid">
     <!--HEADER-->
-    <header class="header">
+    <header class="header" id="header">
         <div class="content">
             <div class="menu container-fluid">
                 <div class="logoTitulo">
