modificacion en general de todas las paginas

--- a/pages/galeriaImagenes.html
+++ b/pages/galeriaImagenes.html
@@ -45,6 +45,8 @@
     </header>
 <!--Main-->
         <main class="main" id="main">
+            <span>Disfruta algunas de las imágenes de toda la saga de Assassin's Creed</span>
+            <p class="descripcion">Explora la galería de imágenes de Assassin's Creed y sumérgete en el increíble mundo de los asesinos a lo largo de la historia.</p>
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
