aplicando Seo y buenas practicas

--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO y buenas practicas -->
     <meta name="description" content="Sitio dedicado a la saga de videojuegos Assassin's Creed. Explora la historia, personajes emblemáticos, jugabilidad y más.">
-
+    <meta name="keywords" content="Assassin's Creed, Assassin's Creed Argentina, juegos, historia, personajes, noticias, Buenos Aires, Mirage, Odyssey, Valhalla, Unity, Syndicate, PC, consolas, PlayStation, Xbox, comunidad, fanáticos, eventos, concursos, merchandising, tienda, productos, videos, imágenes, fondos de pantalla">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="./css/bootstrap.css"> -->
-    <!--BoxIcons css-->
-    <link  href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <title>Assasins Creed Saga</title>
     <!--ccs main-->
     <link rel="stylesheet" href="./css/styles.css">
@@ -33,6 +30,11 @@
                     <a href="./index.html"> <img src="./images/logoAssasins.png" alt="Assasins Creed" class="imgLogo"></a>
                 <span>    Assasin$ Creed</span>
                 </div>
+                <nav class="breadcrumbs">
+                    <ul>
+                        <li><a href="./index.html">Inicio</a></li>
+                    </ul>
+                </nav>
 <!-- Menu Mobile-->
                 <input type="checkbox" id="menu"/>
                 <label for="menu">
@@ -59,7 +61,7 @@
         </section> 
         <section>
             <div class="descripcion" >
-                <h2>¿Que es Assasins Creed?</h2>
+                <h1>¿Que es Assasins Creed?</h1>
                 <p>"Assassin's Creed" es una exitosa saga de videojuegos y franquicia multimedia que combina elementos de acción, aventura, sigilo y ciencia ficción. La serie se centra en la lucha ancestral entre dos facciones secretas: los Asesinos (Assassins) y los Templarios (Templars).En la historia de Assassin's Creed, los Asesinos buscan mantener la libertad y la independencia de la humanidad, mientras que los Templarios persiguen el control y la dominación para lograr la paz a través del orden. Los personajes principales, conocidos como Asesinos, a menudo utilizan tecnología futurista llamada el Animus para revivir las memorias genéticas de sus antepasados, lo que les permite explorar importantes momentos históricos y desempeñar un papel clave en eventos pasados. 
                     La serie se caracteriza por su rica narrativa, que combina la historia real con elementos de ficción y ciencia ficción, y ha explorado una amplia variedad de períodos históricos, desde la Italia renacentista hasta el Antiguo Egipto y la Revolución Americana. Además de los videojuegos, Assassin's Creed ha dado lugar a libros, cómics y una adaptación cinematográfica, convirtiéndose en una de las franquicias más icónicas en la industria de los videojuegos.
                 </p>
