--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,6 +27,12 @@
                     <a href="../index.html"> <img src="../images/logoAssasins.png" alt="Assasins Creed" class="imgLogo"></a>
                 <span>    Assasin$ Creed</span>
                 </div>
+                <nav class="breadcrumbs">
+                    <ul>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="../pages/contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
 <!-- Menu Mobile-->
                 <input type="checkbox" id="menu"/>
                 <label for="menu">
@@ -48,7 +54,7 @@
         <main class="main" id="main">
             
             <section class="sectionFormulario">  
-                <h2 class="tituloContacto">Escribinos, Sumate a La Hermandad</h2>
+                <h1 class="tituloContacto">Escribinos, Sumate a La Hermandad</h1>
                 <div class="formulario">
                     <form>
                         <label for="name">Nombre Completo:</label>
