--- a/pages/jugabilidadMecanicas.html
+++ b/pages/jugabilidadMecanicas.html
@@ -26,6 +26,12 @@
                     <a href="../index.html"> <img src="../images/logoAssasins.png" alt="Assasins Creed" class="imgLogo"></a>
                 <span>    Assasin$ Creed</span>
                 </div>
+                <nav class="breadcrumbs">
+                    <ul>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="../pages/jugabilidadMecanicas.html">Jugabilidad y Mecánicas</a></li>
+                    </ul>
+                </nav>
 <!-- Menu Mobile-->
                 <input type="checkbox" id="menu"/>
                 <label for="menu">
@@ -47,8 +53,9 @@
         <main class="main" id="main">
             <section>
                 <div class="textoJugabilidadYMcanicas">
+                    <h1>Jugabilidad y Mecánicas de Assassin's Creed</h1>
                     <img src="../images/maxresdefault.webp" alt="gameplayAsassins">
-                    <p>Jugabilidad y Mecánicas de Assassin's Creed:
+                    <p>
     
                         Las mecánicas de juego en Assassin's Creed son fundamentales para crear una experiencia de juego inmersiva. Desde el sigilo hasta la acción frenética, el mundo abierto y las misiones intrigantes, la franquicia ofrece una gama diversa de elementos que hacen que los juegos sean únicos. A continuación, profundizaremos en las mecánicas clave, el mundo abierto, las misiones y las características distintivas de Assassin's Creed, además de ofrecer algunos consejos para aprovechar al máximo tu experiencia de juego.
                         
