--- a/pages/personajesEmblematicos.html
+++ b/pages/personajesEmblematicos.html
@@ -26,6 +26,12 @@
                     <a href="../index.html"> <img src="../images/logoAssasins.png" alt="Assasins Creed" class="imgLogo"></a>
                 <span>    Assasin$ Creed</span>
                 </div>
+                <nav class="breadcrumbs">
+                    <ul>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="../pages/personajesEmblematicos.html">Personajes Emblemáticos</a></li>
+                    </ul>
+                </nav>
 <!-- Menu Mobile-->
                 <input type="checkbox" id="menu"/>
                 <label for="menu">
@@ -47,6 +53,7 @@
                 <main class="main" id="main">
                     <section>
                         <div class="divAltairPE">
+                            <h1>Descubre cada Personajes y sus Habiliades</h1>
                             <img src="../images/alta2.webp" alt="personajeAltair">
                             <p>Altair Ibn-La'Ahad:
             
