--- a/pages/galeriaImagenes.html
+++ b/pages/galeriaImagenes.html
@@ -26,6 +26,12 @@
                     <a href="../index.html"> <img src="../images/logoAssasins.png" alt="Assasins Creed" class="imgLogo"></a>
                 <span>    Assasin$ Creed</span>
                 </div>
+                <nav class="breadcrumbs">
+                    <ul>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="../pages/galeriaImagenes.html">Galería de Imágenes</a></li>
+                    </ul>
+                </nav>
 <!-- Menu Mobile-->
                 <input type="checkbox" id="menu"/>
                 <label for="menu">
@@ -45,7 +51,7 @@
     </header>
 <!--Main-->
         <main class="main" id="main">
-            <span>Disfruta algunas de las imágenes de toda la saga de Assassin's Creed</span>
+            <h1>Disfruta algunas de las imágenes de toda la saga de Assassin's Creed</h1>
             <p class="descripcion">Explora la galería de imágenes de Assassin's Creed y sumérgete en el increíble mundo de los asesinos a lo largo de la historia.</p>
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
