--- a/pages/historia.html
+++ b/pages/historia.html
@@ -30,6 +30,12 @@
                     <a href="../index.html"> <img src="../images/logoAssasins.png" alt="Assasins Creed" class="imgLogo"></a>
                 <span>    Assasin$ Creed</span>
                 </div>
+                <nav class="breadcrumbs">
+                    <ul>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="./historia.html">Historia</a></li>
+                    </ul>
+                </nav>
 <!-- Menu Mobile-->
                 <input type="checkbox" id="menu"/>
                 <label for="menu">
@@ -51,7 +57,7 @@
         <main class="main" id="main">
             <section>
                 <div class="historia">
-                    <h2>"La Epopeya de Assassin's Creed: Un Viaje a Través de la Historia"</h2>
+                    <h1>"La Epopeya de Assassin's Creed: Un Viaje a Través de la Historia"</h1>
                     <p>"En esta sección, sumérgete en el apasionante mundo de Assassin's Creed. Explora la rica historia de esta franquicia de videojuegos que combina narrativa épica, acción, sigilo y aventura. Desglosamos la trama a lo largo de diferentes entregas de la serie, destacando los protagonistas clave y su impacto en la lucha entre los Asesinos y los Templarios. Acompáñanos en un viaje a través de épocas históricas y descubre cómo Assassin's Creed te transporta a mundos asombrosos y momentos cruciales a lo largo de la historia. Además, encontrarás una línea de tiempo que te guiará a través de los eventos principales que han dado forma a esta saga icónica."</p>
                 </div>
             </section>
