--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- SEO y buenas practicas -->
     <meta name="description" content="Sitio dedicado a la saga de videojuegos Assassin's Creed. Explora la historia, personajes emblemáticos, jugabilidad y más.">
     <meta name="keywords" content="Assassin's Creed, Assassin's Creed Argentina, juegos, historia, personajes, noticias, Buenos Aires, Mirage, Odyssey, Valhalla, Unity, Syndicate, PC, consolas, PlayStation, Xbox, comunidad, fanáticos, eventos, concursos, merchandising, tienda, productos, videos, imágenes, fondos de pantalla">
+    <meta name="google-site-verification" content="IuX_hNEQ25cqRPcWomBbIHNKFItKMlFI0wMwNVvym3s" />
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <title>Assasins Creed Saga</title>
