--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta name="description" content="Sitio dedicado a la saga de videojuegos Assassin's Creed. Explora la historia, personajes emblemáticos, jugabilidad y más.">
     <meta name="keywords" content="Assassin's Creed, Assassin's Creed Argentina, juegos, historia, personajes, noticias, Buenos Aires, Mirage, Odyssey, Valhalla, Unity, Syndicate, PC, consolas, PlayStation, Xbox, comunidad, fanáticos, eventos, concursos, merchandising, tienda, productos, videos, imágenes, fondos de pantalla">
     <meta name="google-site-verification" content="IuX_hNEQ25cqRPcWomBbIHNKFItKMlFI0wMwNVvym3s" />
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5CCD46NN');</script>
+    <!-- End Google Tag Manager -->
     <!-- Google Analytics -->
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -33,6 +40,10 @@
     <link rel="shortcut icon" href="./images/favicon.png">
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CCD46NN"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="contenedorDeGrid">
     <!--HEADER-->
     <header class="header" id="header">
